[package]
name = "tracing-rc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
indexmap = '^1.0'

[dependencies.petgraph]
version = '^0.6'

[dev-dependencies]
criterion = '^0.3'
pretty_assertions = '^1.0'

[[bench]]
name = "minimal_gc"
harness = false

[[bench]]
name = "cycle_collection"
harness = false