[package]
name = "tracing-rc"
description = "Cycle-aware reference-counted pointers with a safe, simple api"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jesterhearts/tracing-rc"

[dependencies]
indexmap = '^1.0'
petgraph = '^0.6'

[dev-dependencies]
criterion = '^0.3'
pretty_assertions = '^1.0'

[[bench]]
name = "minimal_gc"
harness = false

[[bench]]
name = "cycle_collection"
harness = false