[package]
name    = "tracing-rc-bench"
version = "0.1.0"
publish = false
edition = "2021"

[dependencies]
criterion = '^0.6'

[dependencies.tracing-rc]
path     = "../tracing-rc"
features = [ "sync" ]

[[bench]]
name    = "minimal_gc"
harness = false

[[bench]]
name    = "cycle_collection"
harness = false
