[package]
name = "tracing-rc"
description = "Cycle-aware reference-counted pointers with a safe, simple api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jesterhearts/tracing-rc"

[features]
default = [ "proc_macro" ]
proc_macro = [ "tracing-rc-derive" ]
sync = [ "atomic", "once_cell", "dashmap", "parking_lot" ]

[dependencies]
indexmap = '^1.0'
petgraph = '^0.6'

[dependencies.atomic]
version = '^0.5'
optional = true

[dependencies.dashmap]
version = '^5.0'
optional = true

[dependencies.once_cell]
version = '^1.0'
optional = true

[dependencies.parking_lot]
version = '^0.11'
optional = true

[dependencies.tracing-rc-derive]
path = "../tracing-rc-derive"
optional = true

[dev-dependencies]
pretty_assertions = '^1.0'