[package]
name = "tracing-rc"
description = "Cycle-aware reference-counted pointers with a safe, simple api"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jesterhearts/tracing-rc"
readme = "../README.md"

[features]
default = [ "proc_macro" ]
proc_macro = [ "tracing-rc-derive" ]
sync = [ "atomic", "once_cell", "dashmap", "parking_lot", "tracing-rc-derive/sync" ]

[dependencies]
indexmap = '^1.0'
petgraph = '^0.6'

[dependencies.atomic]
version = '^0.5'
optional = true

[dependencies.dashmap]
version = '^5.0'
optional = true

[dependencies.once_cell]
version = '^1.0'
optional = true

[dependencies.parking_lot]
version = '^0.11'
optional = true

[dependencies.tracing-rc-derive]
path = "../tracing-rc-derive"
version = '^0.1.1'
optional = true

[dev-dependencies]
pretty_assertions = '^1.0'