[package]
name        = "tracing-rc"
description = "Cycle-aware reference-counted pointers with a safe, simple api"
version     = "0.2.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Jesterhearts/tracing-rc"
readme      = "../README.md"

[features]
default    = [ "proc_macro" ]
proc_macro = [ "tracing-rc-derive" ]
sync       = [ "atomic", "bytemuck", "once_cell", "dashmap", "parking_lot", "tracing-rc-derive/sync" ]
# Enables the nightly `doc_auto_cfg` feature.
ENABLE_DOC_AUTO_CFG = [  ]

[dependencies]
atomic            = { version = '0.6', optional = true }
bytemuck          = { version = "1", optional = true, features = [ "derive" ] }
dashmap           = { version = '6', optional = true }
indexmap          = '2'
once_cell         = { version = '1', optional = true }
parking_lot       = { version = '0.12', optional = true }
petgraph          = '0.8'
tracing-rc-derive = { path = "../tracing-rc-derive", version = "0.2.0", optional = true }

[dev-dependencies]
pretty_assertions = '1'

[build-dependencies]
rustc_version = '0.4'

[package.metadata.docs.rs]
all-features = true
